[package]
name = "rash"
version = "0.1.0-beta.0"
edition = "2021"
authors = ["Luke Elliot <rashyluke@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ljelliot/rash"
description = """
Rash (Rust + Bash, get it?) makes shell commands easy!
"""
keywords = ["bash", "command", "linux", "shell", "unix"]
categories = ["command-line-interface", "os", "os::unix-apis"]

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
lazy_static = "1.4"
thiserror = "1.0.38"
once_cell = "1.17.0"