[package]
name = "rsbash"
version = "0.1.1-beta.0"
edition = "2021"
authors = ["Luke Elliot <rashyluke@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ljelliot/rash"
description = """
run bash commands from rust. Simply.
"""
keywords = ["bash", "command", "linux", "shell", "unix"]
categories = ["command-line-interface", "os", "os::unix-apis"]

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
lazy_static = "1.4"
shell-words = "1.1.0"
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1.0.68"
once_cell = "1.17.0"
tempfile = "3.3.0"
rstest = "0.16.0"